Bug 1034327 - Fix memory leak when TURN client is used. r=bwc, a=lmandel